--- a/mlops/.github/workflows/docker-ci-cd.yaml
+++ b/mlops/.github/workflows/docker-ci-cd.yaml
@@ -32,6 +32,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip
           if [ -f my_app/requirements.txt ]; then pip install -r my_app/requirements.txt; fi
+          pip install black pylint pytest
 
       - name: Format
         run: |
