--- a/mlops/.github/workflows/docker-ci-cd.yaml
+++ b/mlops/.github/workflows/docker-ci-cd.yaml
@@ -35,16 +35,13 @@ jobs:
           if [ -f my_app/requirements.txt ]; then pip install -r my_app/requirements.txt; fi
 
       - name: Format
-        run: |
-          black my_app/app.py
+        run: black my_app/app.py
 
       - name: Lint
-        run: |
-          pylint --disable=R,C my_app/app.py
+        run: pylint --disable=R,C my_app/app.py
 
       - name: Test
-        run: |
-          python -m pytest -vv my_app/test.py || echo "No test file found, skipping"
+        run: python -m pytest -vv my_app/test.py || echo "No test file found, skipping"
 
   cd_pipeline:
     runs-on: ubuntu-latest
@@ -65,4 +62,3 @@ jobs:
 
       - name: Docker push
         run: docker push $DOCKER_USER/$REPO_NAME:${{ env.date }}
-
