--- a/mlops/.github/workflows/docker-ci-cd.yaml
+++ b/mlops/.github/workflows/docker-ci-cd.yaml
@@ -31,7 +31,7 @@ jobs:
       - name: Install dependencies
         run: |
           python -m pip install --upgrade pip
-          pip install black pylint pytest
+          python -m pip install black pylint pytest
           if [ -f my_app/requirements.txt ]; then pip install -r my_app/requirements.txt; fi
 
       - name: Format
